[package]
name = "libs"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
ammonia = "4"
atty = "0.2.11"
base64 = "0.22"
csv = "1"
filetime = "0.2"
glob = "0.3"
globset = "0.4"
image = "0.25"
lexical-sort = "0.3"
nom-bibtex = "0.5"
num-format = "0.4"
once_cell = "1"
percent-encoding = "2"
pulldown-cmark = { version = "0.11", default-features = false, features = ["html", "simd"] }
pulldown-cmark-escape = { version = "0.11", default-features = false }
quickxml_to_serde = "0.6"
rayon = "1"
regex = "1"
relative-path = "1"
grass = {version = "0.13", default-features = false, features = ["random"]}
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
slug = "0.1"
svg_metadata = "0.5"
tera = { version = "1.20", default-features = false, features = ["preserve_order", "date-locale"] }
termcolor = "1.0.4"
time = "0.3"
toml = "0.8"
unic-langid = "0.9"
unicode-segmentation = "1.2"
url = "2"
walkdir = "2"
webp = "0.3"


[features]
default = []
