[package]
name = "libs"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
ammonia = "4"
atty = "0.2.11"
base64 = "0.22"
filetime = "0.2"
glob = "0.3"
globset = "0.4"
lexical-sort = "0.3"
num-format = "0.4"
once_cell = "1"
percent-encoding = "2"
pulldown-cmark = { version = "0.11", default-features = false, features = ["html", "simd"] }
pulldown-cmark-escape = { version = "0.11", default-features = false }
regex = "1"
relative-path = "1"
grass = {version = "0.13", default-features = false, features = ["random"]}
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
slug = "0.1"
tera = { version = "1.20", default-features = false, features = ["preserve_order", "date-locale"] }
termcolor = "1.0.4"
time = "0.3"
toml = "0.8"
unic-langid = "0.9"
unicode-segmentation = "1.2"
url = "2"
walkdir = "2"


[features]
default = []
